group 'com.dafei1288'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'maven-publish'

sourceCompatibility = 1.8

repositories {
    maven {url 'http://maven.aliyun.com/nexus/content/groups/public/'}
    mavenCentral()
}

dependencies {
    // https://mvnrepository.com/artifact/com.google.guava/guava
    compile group: 'com.google.guava', name: 'guava', version: '24.0-jre'
    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.7'
    compile group: 'org.antlr', name: 'antlr4-runtime', version: '4.7.1'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}



/*
https://www.cnblogs.com/jiaoyiping/p/7045965.html

gradle publishMavenPublicationToMavenRepository


publishing {
    publications {
        maven(MavenPublication) {
            groupId project.group
            artifactId project.name
            version project.version
            //若是war包，就写components.web,若是jar包，就写components.java
            from components.web
        }
    }
    repositories {
        maven {

            if (project.version.endsWith('-SNAPSHOT')) {
                url = "快照版本的nexus仓库地址"
            } else {
                url = "release版本的仓库地址"
            }

            credentials {
                username 'nexus仓库用户名'
                password 'nexus仓库密码'
            }
        }
    }
}
*/